amf-client/shared/src/test/resources/parser-results/error/not-seq-dependency-def-jsonchema.raml
#%RAML 1.0
title: Contact Centre Toolset


/contacts:
  description: Operations on CRM contacts
  get:
    responses:
      200:
        body:
          application/json:
            type: |
              {
              	"$schema": "http://json-schema.org/draft-04/schema",
              	"additionalProperties": false,
              	"type": "array",
              	"id": "#phoneNumbers",
              	"items": {
              		"type": "object",
              		"properties": {
              			"type": {
              				"type": "string",
              				"enum": [
              					"home",
              					"work",
              					"mobile",
              					"alternate"
              				],
              				"id": "#type",
              				"description": "Type of the phone number, e.g. home or work"
              			},
              			"number": {
              				"type": "string",
              				"pattern": ".+",
              				"id": "#number",
              				"description": "The phone number"
              			},
              			"extension": {
              				"type": "string",
              				"pattern": ".+",
              				"id": "#extension",
              				"description": "The phone extension (only allowed on work numbers)"
              			}
              		},
              		"dependencies": {
              			"extension": {
              				"properties": {
              					"type": {
              						"enum": [
              							"work"
              						]
              					}
              				}
              			}
              		}
              	}
              }

